--- a/need.css
+++ b/need.css
@@ -272,7 +272,7 @@ h4 mark {
 }
 
 .stacks {
-    background-color: rgb(251, 252, 253);
+    background-color: #fff;
     opacity: 0.8;
 }
 
@@ -300,7 +300,7 @@ h4 mark {
     transition: top;
     transition-delay: 3s;
     transition-duration: 10s;
-    box-shadow: 2px 2px 2px 2px rgb(245, 249, 253);;
+    box-shadow: 2px 2px 2px 2px rgb(221, 232, 243);;
     height: 50px;
     
 }
@@ -346,7 +346,7 @@ h6 mark {
      display: grid;
     grid-template-columns: 200px 200px 200px;
     column-gap: 180px;
-    row-gap: -2px;
+    row-gap: -100px;
     margin-top: 100px;
 margin-left: 100px;
     
@@ -368,7 +368,7 @@ margin-left: 100px;
 .four {
     
 }*/
- .five , .four{
+ .five, .four{
     margin-left: 200px;
 }
 .first, .second, .third, .four, .five {
@@ -466,3 +466,330 @@ footer .talent-email a {
     top: 110px;
     left: -70px;
 }
+
+@media (max-width: 1224px) {
+    body{
+        overflow: auto;
+        scroll-behavior: smooth;
+    }
+
+    header nav .nav-home, .nav-impact, .nav-why {
+        display: none;
+    }
+   header {
+    display: flex;
+    justify-content: space-around;
+   }
+
+   header nav {
+  left: -50px;
+   }
+
+   
+   
+
+    .container {
+        flex-direction: column;
+    }
+    .talents {
+        height: 790px;
+    }
+    h1 {
+    margin: auto;
+    
+    }
+    .talents p {
+      text-align: center;
+        width: 100%;
+        margin: 3px;
+        padding: 5px;
+    }
+    .talents #wire1 {
+        width: 100px;
+        position: relative;
+    }
+
+    #talent_btn1 {
+        width: 25%;
+    }
+    #talent_btn2 {
+        width: 30%;
+    }
+   .talents #talent_btn1,  #talent_btn2 {
+        left: 70px;
+        padding: 10px;
+        text-align: center;
+        
+    }
+
+    .talents #male1 {
+        position: relative;
+        top: 100px;
+        left: 180px;
+        
+    }
+    .talents #wire2 {
+        display: none;
+    }
+
+    .impact {
+        height: 850px;
+    }
+    h2 {
+        text-align: center;
+        margin-top: -70px;
+        width: 80%;
+    }
+    h3, .sub-impact p {
+        margin: 10px;
+        margin-left: 220px;
+        font-size: larger;
+    }
+    .nations img{
+        width: 70px;
+        height: 70px;
+    position: relative;
+    left: 80px;
+    }
+    .people img{
+        position: relative;
+        top: 300px;
+        left: -650px;
+    }
+
+    h4 {
+        width: 100%;
+        margin: 5px;
+    }
+   .stills {
+    height: 800px;
+   }
+
+    .stacks ul {
+        display: grid;
+        grid-template-columns: 200px 200px 200px;
+       column-gap: 20px;
+    }
+
+    .stacks ul li {
+        width: 100%;
+    
+
+    }
+
+    h5 {
+        margin-top: 10px;
+    }
+  .stacks #wire3 {
+    display: none;
+  }
+    .why_us {
+        height: 1500px;
+        margin-top: 100px;
+    }
+    .boxes {
+        grid-template-columns: 200px 200px;             
+      column-gap: 160px;
+      margin-left: 30px;
+    }
+.five, .four {
+    margin-left: 0;
+}
+
+.five {
+    width: 700px;
+}
+.why_us #wire4 {
+    top: -700px;
+}
+.why_us .why-btn  {
+    top: -70px;
+    left: 180px;
+}
+#why-btn1  {
+width: 20%;
+}
+#why-btn2  {
+    width: 25%;
+}
+
+}
+
+@media (max-width: 540px) {
+   .talents h1 {
+        margin: 3px;
+        margin-left: 10px;
+        margin-top: 150px;
+        padding: 5px;
+        text-align: center;
+        
+        }
+        .talents p {
+          text-align: center;
+            width: 100%;
+            margin: 3px;
+            padding: 5px;
+        }
+        .talents #wire1 {
+            width: 80px;
+            position: relative;
+            margin-left: 280px;
+            top: -10px;
+            
+        }
+    
+        #talent_btn1 {
+            width: 25%;
+        }
+        #talent_btn2 {
+            width: 35%;
+        }
+       .talents #talent_btn1,  #talent_btn2 {
+            left: -70px;
+            padding: 10px;
+            text-align: center;
+            
+        }
+    
+        .talents #male1 {
+            position: relative;
+            top: 100px;
+            left: 10px;
+            width: 370px
+            
+        }
+        .talents #wire2 {
+            display: none;
+        }
+
+        .impact {
+            height: 850px;
+        }
+        h2 {
+            margin: 10px;
+            margin-left: 20px;
+            font-size: 25px;
+            margin-top: -100px;
+        }
+        h3, .sub-impact p {
+            margin: 10px;
+            margin-left: 40px;
+            font-size: larger;
+        }
+        .nations img{
+            width: 40px;
+            height: 40px;
+        position: relative;
+        left: -60px;
+        }
+        .people img{
+            position: relative;
+            top: 300px;
+            left: -780px;
+            width: 300px;
+            height: 300px;
+        }
+        .stills {
+            height: 1500px;
+           }
+        
+            .stacks ul {
+                display: grid;
+                grid-template-columns:  200px 200px;
+               column-gap: 1px;
+               row-gap: 1px;
+               left: -70px;
+               
+            }
+        
+            .stacks ul li {
+            width: 150px;
+            padding: 15px;
+            height: 80px;
+            font-size: 15px;
+            text-align: center;
+            
+            
+         }
+         h4 {
+            width: 400px;
+            font-size: 30px;
+            
+         }
+        
+            h5 {
+                margin-top: 10px;
+                font-size: 30px;
+                width: 400px;
+                margin-left: 10px;
+            }
+          .stacks #wire3 {
+            display: none;
+          }
+            .why_us {
+                height: 2200px;
+                margin-top: 340px;
+            }
+         h6 {
+            font-size: 30px;
+            margin-top: 30px;
+         }
+            .boxes {
+                grid-template-columns: 200px;             
+              row-gap: -12px;
+              margin: 13px;
+              margin-top: 40px;
+            }
+            .five {
+                width: 350px;
+            }
+        
+        
+        .why_us #wire4 {
+            top: -1100px;
+        }
+        .why_us .why-btn  {
+            top: -100px;
+            left: 30px;
+        }
+        #why-btn1  {
+        width: 35%;
+        padding: 16px;
+        }
+        #why-btn2  {
+            width: 40%;
+            padding: 15px;
+        }
+        
+        footer {
+            height: 350px;
+            flex-direction: column;
+            
+        }
+
+        .logo-text {
+            margin-top: 50px;
+            margin-left: 100px;
+        }
+        .logo-text p {
+            position: relative;
+            top: 200px;
+            left: -40px;
+        }
+
+        .socials {
+            position: relative;
+            top: -200px;
+            left: 200px;
+        }
+       .socials .talent-email {
+         position: relative;
+          top: -50px;
+        }
+
+        
+        }
+
+
+
+
